cluster/bijouxlabs/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: allow-ha-lan
  namespace: bijouxlabs
spec:
  ipAllowList:
    sourceRange:
      - 192.168.0.0/24
      - 10.0.0.0/8
