cluster/bijouxlabs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bijouxlabs
  labels:
    goldilocks.fairwinds.com/enabled: "true"
